--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,13 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.androidlatihan15_firebaseauth_husin"
-        minSdkVersion 19
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -45,10 +47,21 @@ dependencies {
 
     // implementasi Firebase
     implementation 'com.google.firebase:firebase-core:16.0.8'
-    implementation 'com.google.firebase:firebase-auth:16.2.1'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-database:17.0.0'
+    //storage
+    implementation 'com.google.firebase:firebase-storage:17.0.0'
     // implementation google auth
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.android.material:material:1.0.0'
 
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:3.3.1'
+    implementation 'de.hdodenhof:circleimageview:1.3.0'
+ // glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
 }
 apply  plugin: 'com.google.gms.google-services'
