--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".Login_Act"/>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".Profile"/>
         <activity android:name=".Registrasi_Act"/>
         <activity android:name=".NavBottom_Act" android:theme="@style/AppTheme.NoActionBar"/>
     </application>
